[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games project"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]
repository = "https://github.com/AdrianusWest/python-project-lvl1"
classifiers = [
  "Programming Language :: Python :: 3.10.8",
  "Natural Language :: English",
  "Environment :: Console"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.0.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
flake8-mutable = "^1.2.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
